implement routes for purchase/sales/return

--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Newism 貨物管理系統</h1>
 
-<%= link_to '進貨', product_index_path, class:"btn btn-warning btn-lg"%>
-<%= link_to '銷貨', product_index_path, class:"btn btn-warning btn-lg"%>
-<%= link_to '退貨', product_index_path, class:"btn btn-warning btn-lg"%>
+<%= link_to '進貨', purchase_path, class:"btn btn-warning btn-lg"%>
+<%= link_to '銷貨', sales_path, class:"btn btn-warning btn-lg"%>
+<%= link_to '退貨', return_to_path, class:"btn btn-warning btn-lg"%>
 
 
