--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -4,4 +4,5 @@
 <%= link_to '銷貨', sales_path, class:"btn btn-warning btn-lg"%>
 <%= link_to '退貨', return_to_path, class:"btn btn-warning btn-lg"%>
 
+<h2>目前庫存</h2>
 
