--- a/app/views/products/purchase.html.erb
+++ b/app/views/products/purchase.html.erb
@@ -20,4 +20,4 @@
   
 <% end %>
 
-<%= link_to '回首頁', product_index_path, class:"btn btn-warning btn-lg"%>
+<%= link_to '回首頁', products_path, class:"btn btn-warning btn-lg"%>
